--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -1,12 +1,12 @@
 name: Go
 
 on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+  # push:
+  #   branches:
+  #     - master
+  # pull_request:
+  #   branches:
+  #     - master
   workflow_dispatch:
 
 jobs:
