--- a/.github/workflows/master_app-minatsugo-bot.yml
+++ b/.github/workflows/master_app-minatsugo-bot.yml
@@ -4,9 +4,9 @@
 name: Build and deploy container app to Azure Web App - app-minatsugo-bot
 
 on:
-  push:
-    branches:
-      - master
+  # push:
+  #   branches:
+  #     - master
   workflow_dispatch:
 
 jobs:
