--- a/.github/workflows/bicep.yaml
+++ b/.github/workflows/bicep.yaml
@@ -9,10 +9,10 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
     
     - name: Login to Azure
-      uses: azure/login@v1
+      uses: azure/login@v2
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
@@ -22,5 +22,12 @@ jobs:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
         resourceGroupName: ${{ secrets.AZURE_RG }}
         template: ./azure.bicep
-        parameters: ''
+        parameters: 'servicePrincipalObjectId=${{ vars.SERVICE_PRINCIPAL_ID }}'
         failOnStdErr: false
+    
+    - name: Add secrets to the Key vault
+      uses: azure/cli@v2
+      with:
+        inlineScript: |
+          az keyvault secret set --vault-name kv-app-minatsugo-bot --name "Test" --value "${{ secrets.TEST_SECRET }}"
+          az keyvault secret set --vault-name kv-app-minatsugo-bot --name "Test1" --value "${{ secrets.TEST_SECRET }}"
