--- a/.github/workflows/fly.yaml
+++ b/.github/workflows/fly.yaml
@@ -1,8 +1,10 @@
 name: Fly Deploy
 on:
-  push:
-    branches:
-      - master    # change to main if needed
+#   push:
+#     branches:
+#       - master    # change to main if needed
+  workflow_dispatch:
+
 
 jobs:
   deploy:
