Changed a few fly related config and hopefully fixed a bug with database connection

--- a/fly.toml
+++ b/fly.toml
@@ -7,10 +7,8 @@ app = 'minatsugo'
 primary_region = 'arn'
 
 [build]
-  [build.args]
-    GO_VERSION = '1.21.5'
 
 [[vm]]
-  memory = '1gb'
+  memory = '256mb'
   cpu_kind = 'shared'
   cpus = 1
