Switched from only in memory cache to redis cache

--- a/.github/workflows/fly.yaml
+++ b/.github/workflows/fly.yaml
@@ -17,7 +17,7 @@ jobs:
 
       - name : Set up flyctl
         id: flyctl
-        uses: superfly/flyctl-actions/setup-flyctl@master
+        uses: superfly/flyctl-actions/setup-flyctl@v1
 
       - name: Deploy to Fly
         run: flyctl deploy --remote-only
